# chinese-learning-tts

./: .env.example  .gitignore  API_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  app.py  config.py  create-video.py  demo.py  pyproject.toml  requirements.txt  run.bat  run.sh  stt.py  tts_generator.py  zipvoice-tts.py
static/: script.js  style.css
templates/: index.html  prompt.txt
