[project]
name = "chineses-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "pypinyin>=0.55.0",
    "sherpa-onnx>=1.12.39",
    "sherpa-onnx-bin>=1.12.39",
    "soundfile>=0.13.1",
]
